finished sample_1 image2table

--- a/cat_poc_model_2/Untitled-1.ipynb
+++ b/cat_poc_model_2/Untitled-1.ipynb
@@ -241,6 +241,94 @@
     "    print(text)\n",
     "    print(\"---\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
+    "model_name = 'deep-learning-analytics/GrammarCorrector'\n",
+    "torch_device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "tokenizer = T5Tokenizer.from_pretrained(model_name)\n",
+    "model = T5ForConditionalGeneration.from_pretrained(model_name).to(torch_device)\n",
+    "\n",
+    "def correct_grammar(input_text,num_return_sequences):\n",
+    "  batch = tokenizer([input_text],truncation=True,padding='max_length',max_length=164, return_tensors=\"pt\").to(torch_device)\n",
+    "  translated = model.generate(**batch,max_length=164,num_beams=4, num_return_sequences=num_return_sequences, temperature=1.5)\n",
+    "  tgt_text = tokenizer.batch_decode(translated, skip_special_tokens=True)\n",
+    "  return tgt_text\n",
+    "\n",
+    "## Testing the model on text\n",
+    "text = ''' I want to dedicate this book to my family. Rachel, Connor, and Ben, you are my life. To my \n",
+    "wonderful mother, Susan, and my sister, Kristy, - thank you for the love and support. I also \n",
+    "would like to thank the faculty, staff, and students at both Notre Dame of Maryland \n",
+    "University and Johns Hopkins University for allowing me to fulfill my passion for teaching \n",
+    "the teachers of today and tomorrow. -Ryan L. Schaaf \n",
+    " \n",
+    "I want to dedicate this book to my parents, who always promoted the value of a strong \n",
+    "education. From installing my pretend classroom in our basement and pretending to be my \n",
+    "first students, to encouraging me throughout college and graduate school, I am forever \n",
+    "grateful. To my husband, Nick, thank you for being my first editor and always allowing me to \n",
+    "bounce ideas off of you. We are a team. Thank you for always supporting me. Ian and Ryan, \n",
+    "thank you for this unbelievable opportunity and all that you have taught me throughout this \n",
+    "experience. -Becky Zayas \n",
+    " \n",
+    "This book is intended to celebrate the exceptional dedication and courage educators have \n",
+    "exhibited, and to acknowledge their demonstrated capacity to adapt and innovate in \n",
+    "extraordinarily challenging and uncertain conditions. Now is the time for us to recognize the \n",
+    "exceptional role they play, and to empower them with the training, professional development, \n",
+    "support, and working conditions needed to effectively deploy their talents. For the education \n",
+    "system to recover from the COVID pandemic requires sustained investment in the well-\n",
+    "being, training, professional development and working conditions of the world’s 71 million \n",
+    "educators. Education recovery will only be successful if it is conducted hand-in-hand with \n",
+    "teachers, giving them both voice and agency to participate in the critical change process. - Ian \n",
+    "Jukes \n",
+    "    \n",
+    " '''\n",
+    "\n",
+    "print(correct_grammar(text, num_return_sequences=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "\n",
+    "def load_model():\n",
+    "    model_name = \"bert-base-uncased\"  # Replace with the appropriate pre-trained model name\n",
+    "    tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "    model = BertForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
+    "    return model, tokenizer\n",
+    "\n",
+    "def classify_grammar(sentence, model, tokenizer):\n",
+    "    inputs = tokenizer(sentence, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "    outputs = model(**inputs)\n",
+    "    logits = outputs.logits\n",
+    "    probabilities = torch.softmax(logits, dim=-1)\n",
+    "    predicted_class_index = torch.argmax(probabilities).item()\n",
+    "    label_mapping = {0: \"Grammatically Correct\", 1: \"Grammatically Incorrect\"}\n",
+    "    predicted_class_label = label_mapping[predicted_class_index]\n",
+    "    return predicted_class_label\n",
+    "\n",
+    "# Example usage\n",
+    "sentence = \"She don't likes ice cream..\"\n",
+    "\n",
+    "# \"She don't likes ice cream.\"\n",
+    "# \"He plays the piano and tennis.\"\n",
+    "# \"My dogs eat cookies and eats cake.\"\n",
+    "\n",
+    "model, tokenizer = load_model()\n",
+    "predicted_label = classify_grammar(sentence, model, tokenizer)\n",
+    "print(f\"Sentence: {sentence}\")\n",
+    "print(f\"Predicted Label: {predicted_label}\")\n"
+   ]
   }
  ],
  "metadata": {
