--- a/cat_poc_model_2/falcon_sample.ipynb
+++ b/cat_poc_model_2/falcon_sample.ipynb
@@ -2,105 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
-    "model_name = 'deep-learning-analytics/GrammarCorrector'\n",
-    "torch_device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "tokenizer = T5Tokenizer.from_pretrained(model_name)\n",
-    "model = T5ForConditionalGeneration.from_pretrained(model_name).to(torch_device)\n",
-    "\n",
-    "def correct_grammar(input_text,num_return_sequences):\n",
-    "  batch = tokenizer([input_text],truncation=True,padding='max_length',max_length=164, return_tensors=\"pt\").to(torch_device)\n",
-    "  translated = model.generate(**batch,max_length=164,num_beams=4, num_return_sequences=num_return_sequences, temperature=1.5)\n",
-    "  tgt_text = tokenizer.batch_decode(translated, skip_special_tokens=True)\n",
-    "  return tgt_text\n",
-    "\n",
-    "## Testing the model on text\n",
-    "text = ''' I want to dedicate this book to my family. Rachel, Connor, and Ben, you are my life. To my \n",
-    "wonderful mother, Susan, and my sister, Kristy, - thank you for the love and support. I also \n",
-    "would like to thank the faculty, staff, and students at both Notre Dame of Maryland \n",
-    "University and Johns Hopkins University for allowing me to fulfill my passion for teaching \n",
-    "the teachers of today and tomorrow. -Ryan L. Schaaf \n",
-    " \n",
-    "I want to dedicate this book to my parents, who always promoted the value of a strong \n",
-    "education. From installing my pretend classroom in our basement and pretending to be my \n",
-    "first students, to encouraging me throughout college and graduate school, I am forever \n",
-    "grateful. To my husband, Nick, thank you for being my first editor and always allowing me to \n",
-    "bounce ideas off of you. We are a team. Thank you for always supporting me. Ian and Ryan, \n",
-    "thank you for this unbelievable opportunity and all that you have taught me throughout this \n",
-    "experience. -Becky Zayas \n",
-    " \n",
-    "This book is intended to celebrate the exceptional dedication and courage educators have \n",
-    "exhibited, and to acknowledge their demonstrated capacity to adapt and innovate in \n",
-    "extraordinarily challenging and uncertain conditions. Now is the time for us to recognize the \n",
-    "exceptional role they play, and to empower them with the training, professional development, \n",
-    "support, and working conditions needed to effectively deploy their talents. For the education \n",
-    "system to recover from the COVID pandemic requires sustained investment in the well-\n",
-    "being, training, professional development and working conditions of the world’s 71 million \n",
-    "educators. Education recovery will only be successful if it is conducted hand-in-hand with \n",
-    "teachers, giving them both voice and agency to participate in the critical change process. - Ian \n",
-    "Jukes \n",
-    "    \n",
-    " '''\n",
-    "\n",
-    "print(correct_grammar(text, num_return_sequences=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from transformers import BertTokenizer, BertForSequenceClassification\n",
-    "\n",
-    "def load_model():\n",
-    "    model_name = \"bert-base-uncased\"  # Replace with the appropriate pre-trained model name\n",
-    "    tokenizer = BertTokenizer.from_pretrained(model_name)\n",
-    "    model = BertForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
-    "    return model, tokenizer\n",
-    "\n",
-    "def classify_grammar(sentence, model, tokenizer):\n",
-    "    inputs = tokenizer(sentence, padding=True, truncation=True, return_tensors=\"pt\")\n",
-    "    outputs = model(**inputs)\n",
-    "    logits = outputs.logits\n",
-    "    probabilities = torch.softmax(logits, dim=-1)\n",
-    "    predicted_class_index = torch.argmax(probabilities).item()\n",
-    "    label_mapping = {0: \"Grammatically Correct\", 1: \"Grammatically Incorrect\"}\n",
-    "    predicted_class_label = label_mapping[predicted_class_index]\n",
-    "    return predicted_class_label\n",
-    "\n",
-    "# Example usage\n",
-    "sentence = \"She don't likes ice cream..\"\n",
-    "\n",
-    "# \"She don't likes ice cream.\"\n",
-    "# \"He plays the piano and tennis.\"\n",
-    "# \"My dogs eat cookies and eats cake.\"\n",
-    "\n",
-    "model, tokenizer = load_model()\n",
-    "predicted_label = classify_grammar(sentence, model, tokenizer)\n",
-    "print(f\"Sentence: {sentence}\")\n",
-    "print(f\"Predicted Label: {predicted_label}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mOSError: [Errno 28] No space left on device. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-20 13:59:26.928860: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-07-20 13:59:26.984370: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-20 13:59:27.708169: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -133,32 +45,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Load the saved state dictionary into the model\n",
     "model_file = '/home/ubuntu/ritesh_manchikanti/cat_poc_model_2/bert-based-uncased-GED.pth'\n",
     "model = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)\n",
     "model.load_state_dict(torch.load(model_file))\n",
-    "device = torch.device(\"cuda:3\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda:2\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
     "model.to(device)\n",
-    "model.eval()\n"
+    "model.eval()\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', \n",
+    "                                          do_lower_case = True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "def get_first_sentence_prediction(model,tokenizer, sentences):\n",
+    "    # Load the BERT model and tokenizer\n",
+    "    # model = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)\n",
+    "    # tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "\n",
+    "    # We need to add special tokens at the beginning and end of each sentence\n",
+    "    # for BERT to work properly\n",
+    "    sentences = [\"[CLS] \" + sentence + \" [SEP]\" for sentence in sentences]\n",
+    "    labels = [0]  # Dummy labels for prediction, you can ignore this since we only predict the first sentence.\n",
+    "\n",
+    "    # Tokenize and pad the sentences\n",
+    "    tokenized_texts = [tokenizer.tokenize(sent) for sent in sentences]\n",
+    "    MAX_LEN = 128\n",
+    "    input_ids = pad_sequences(\n",
+    "        [tokenizer.convert_tokens_to_ids(txt) for txt in tokenized_texts], \n",
+    "        maxlen=MAX_LEN, dtype=\"long\", truncating=\"post\", padding=\"post\"\n",
+    "    )\n",
+    "    input_ids = [tokenizer.convert_tokens_to_ids(x) for x in tokenized_texts]\n",
+    "    input_ids = pad_sequences(input_ids, maxlen=MAX_LEN, dtype=\"long\", truncating=\"post\", padding=\"post\")\n",
+    "    attention_masks = []\n",
+    "    for seq in input_ids:\n",
+    "        seq_mask = [float(i > 0) for i in seq]\n",
+    "        attention_masks.append(seq_mask)\n",
+    "\n",
+    "    # Convert inputs to tensors\n",
+    "    prediction_inputs = torch.tensor(input_ids)\n",
+    "    prediction_masks = torch.tensor(attention_masks)\n",
+    "    prediction_labels = torch.tensor(labels)\n",
+    "\n",
+    "    # Set device to GPU if available\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        # Forward pass, calculate logit predictions\n",
+    "        logits = model(prediction_inputs.to(device), token_type_ids=None, attention_mask=prediction_masks.to(device))\n",
+    "\n",
+    "    # Move logits and labels to CPU\n",
+    "    logits = logits.detach().cpu().numpy()\n",
+    "\n",
+    "    # Store predictions and true labels\n",
+    "    predictions = np.argmax(logits, axis=1).flatten()\n",
+    "\n",
+    "    return predictions[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "# # Example usage\n",
+    "# sentences = [\"They drank the pub.\", \"She likes ice cream.\"]\n",
+    "# predicted_label = get_first_sentence_prediction(sentences)\n",
+    "# print(predicted_label)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence 1 in Chunk 1: Sentence Label: incorrect, Learner Choice, Learning Voice \n",
+      "\n",
+      "Learner Voice, Learner Choice offers fresh, forward-thinking supports for teachers creating \n",
+      "an empowered, student-centered classroom.\n",
+      "Sentence 2 in Chunk 1: Sentence Label: correct, Learner agency is a major topic in today’s \n",
+      "schools, but what does it mean in practice, and how do these practices give students skills and \n",
+      "opportunities they will need to thrive as citizens, parents, and workers in our ever-shifting \n",
+      "climate?\n",
+      "Sentence 3 in Chunk 1: Sentence Label: incorrect, Showcasing\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Function to extract text from PDF\n",
@@ -178,7 +192,6 @@
     "        fake_file_handle.close()\n",
     "    \n",
     "    return text\n",
-    "\n",
     "# Function to divide text into chunks of 512 tokens\n",
     "def divide_text_into_chunks(text, max_chunk_size=512):\n",
     "    tokenized_texts = text.split()  # Assuming the text is already tokenized by spaces, adjust as needed\n",
@@ -197,61 +210,18 @@
     "    \n",
     "    return chunks\n",
     "text_splitter_1 = TokenTextSplitter(chunk_size=100,chunk_overlap = 2)\n",
-    "\n",
     "# Example usage\n",
     "pdf_path = './15031-4983-FullBook.pdf'\n",
     "text = extract_text_from_pdf(pdf_path)\n",
     "chunks = text_splitter_1.split_text(text)\n",
     "# chunks = divide_text_into_chunks(text)\n",
-    "\n",
     "# Predict each chunk\n",
-    "\n",
     "for idx, chunk in enumerate(chunks[:1]):\n",
-    "    print(len(chunk.split()))\n",
     "    sentences = sent_tokenize(chunk)\n",
-    "    print(sentences)\n",
-    "    # print(idx,chunk)\n",
-    "    # for sent in chunk:\n",
-    "        # print(sent)\n",
-    "    # tokenized_texts = [tokenizer.tokenize(sent) for sent in chunk]\n",
-    "    \n",
-    "# for idx, chunk in enumerate(chunks[:1]):\n",
-    "#     sentences = sent_tokenize(chunk)\n",
-    "#     # We need to add special tokens at the beginning and end of each sentence\n",
-    "#     # for BERT to work properly\n",
-    "#     sentences = [\"[CLS] \" + sentence + \" [SEP]\" for sentence in sentences]\n",
-    "#     labels = [0]  # Assuming you have label information for each sentence, you can modify this accordingly\n",
-    "\n",
-    "#     tokenized_texts = [tokenizer.tokenize(sent) for sent in sentences]\n",
-    "    \n",
-    "#     tokenized_texts = [tokenizer.tokenize(sent) for sent in chunk]\n",
-    "#     MAX_LEN = 512\n",
-    "#     input_ids = pad_sequences(\n",
-    "#         [tokenizer.convert_tokens_to_ids(txt) for txt in tokenized_texts], \n",
-    "#         maxlen=MAX_LEN, dtype=\"long\", truncating=\"post\", padding=\"post\"\n",
-    "#     )\n",
-    "    \n",
-    "#     # Convert to tensors\n",
-    "#     prediction_inputs = torch.tensor(input_ids)\n",
-    "#     prediction_masks = torch.tensor([[float(i > 0) for i in seq] for seq in input_ids])\n",
-    "    \n",
-    "#     # Put model in evaluation mode\n",
-    "#     model.eval()\n",
-    "    \n",
-    "#     with torch.no_grad():\n",
-    "#         # Forward pass, calculate logit predictions\n",
-    "#         logits = model(prediction_inputs.to(device), token_type_ids=None, attention_mask=prediction_masks.to(device))\n",
-    "    \n",
-    "#     # Move logits to CPU and store predictions for each sentence\n",
-    "#     logits = logits.detach().cpu().numpy()\n",
-    "#     flat_predictions = np.argmax(logits, axis=1).flatten()\n",
-    "    \n",
-    "#     # Print the predictions for each sentence in the chunk\n",
-    "#     for i, predicted_class_index in enumerate(flat_predictions):\n",
-    "#         label_mapping = {0: \"Grammatically Correct\", 1: \"Grammatically Incorrect\"}\n",
-    "#         predicted_class_label = label_mapping[predicted_class_index]\n",
-    "#         print(f\"Chunk {idx+1} - Sentence {i+1}: {predicted_class_label}\")\n",
-    "  \n"
+    "    label_mapping = {0: \"incorrect\", 1: \"correct\"}\n",
+    "    for sentence in sentences:\n",
+    "        sentence_label = get_first_sentence_prediction(model, tokenizer, [sentence])\n",
+    "        print(f\"Chunk {idx+1} -  Sentence {sentences.index(sentence) + 1}: Sentence Label: {label_mapping[sentence_label]}, {sentence}\")"
    ]
   },
   {
@@ -263,9 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentences\n",
+      "['They drank the pub.']\n",
+      "tokenized_texts\n",
+      "[['[CLS]', 'they', 'drank', 'the', 'pub', '.', '[SEP]']]\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# import torch\n",
     "# from transformers import BertForSequenceClassification, BertTokenizer\n",
@@ -369,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.10 ('pytorch')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
