--- a/cat_poc_model_2/Untitled-1.ipynb
+++ b/cat_poc_model_2/Untitled-1.ipynb
@@ -244,9 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i have a dog as pet.', 'i have dog as pet.']\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
@@ -262,31 +270,8 @@
     "  return tgt_text\n",
     "\n",
     "## Testing the model on text\n",
-    "text = ''' I want to dedicate this book to my family. Rachel, Connor, and Ben, you are my life. To my \n",
-    "wonderful mother, Susan, and my sister, Kristy, - thank you for the love and support. I also \n",
-    "would like to thank the faculty, staff, and students at both Notre Dame of Maryland \n",
-    "University and Johns Hopkins University for allowing me to fulfill my passion for teaching \n",
-    "the teachers of today and tomorrow. -Ryan L. Schaaf \n",
-    " \n",
-    "I want to dedicate this book to my parents, who always promoted the value of a strong \n",
-    "education. From installing my pretend classroom in our basement and pretending to be my \n",
-    "first students, to encouraging me throughout college and graduate school, I am forever \n",
-    "grateful. To my husband, Nick, thank you for being my first editor and always allowing me to \n",
-    "bounce ideas off of you. We are a team. Thank you for always supporting me. Ian and Ryan, \n",
-    "thank you for this unbelievable opportunity and all that you have taught me throughout this \n",
-    "experience. -Becky Zayas \n",
-    " \n",
-    "This book is intended to celebrate the exceptional dedication and courage educators have \n",
-    "exhibited, and to acknowledge their demonstrated capacity to adapt and innovate in \n",
-    "extraordinarily challenging and uncertain conditions. Now is the time for us to recognize the \n",
-    "exceptional role they play, and to empower them with the training, professional development, \n",
-    "support, and working conditions needed to effectively deploy their talents. For the education \n",
-    "system to recover from the COVID pandemic requires sustained investment in the well-\n",
-    "being, training, professional development and working conditions of the world’s 71 million \n",
-    "educators. Education recovery will only be successful if it is conducted hand-in-hand with \n",
-    "teachers, giving them both voice and agency to participate in the critical change process. - Ian \n",
-    "Jukes \n",
-    "    \n",
+    "text = '''\n",
+    "i have dog as pet  \n",
     " '''\n",
     "\n",
     "print(correct_grammar(text, num_return_sequences=2))"
@@ -338,7 +323,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.10"
   },
   "orig_nbformat": 4,
