--- a/cat_poc_model_2/grammarly.ipynb
+++ b/cat_poc_model_2/grammarly.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, T5ForConditionalGeneration\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "\n",
+    "from keras.utils import pad_sequences\n",
+    "import torch\n",
     "# tokenizer = AutoTokenizer.from_pretrained(\"grammarly/coedit-xxl\")\n",
     "# model = T5ForConditionalGeneration.from_pretrained(\"grammarly/coedit-xxl\")"
    ]
@@ -131,29 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "num_return_sequences has to be 1 when doing greedy search, but is 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m input_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe book was really interesting! I couldn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt put it down?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m input_ids \u001b[38;5;241m=\u001b[39m tokenizer(input_text, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39minput_ids\n\u001b[0;32m----> 3\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m256\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mnum_return_sequences\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m edited_text \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mdecode(outputs[\u001b[38;5;241m0\u001b[39m], skip_special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m edited_text\n",
-      "File \u001b[0;32m/opt/conda/envs/pytorch/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/opt/conda/envs/pytorch/lib/python3.10/site-packages/transformers/generation/utils.py:1532\u001b[0m, in \u001b[0;36mGenerationMixin.generate\u001b[0;34m(self, inputs, generation_config, logits_processor, stopping_criteria, prefix_allowed_tokens_fn, synced_gpus, assistant_model, streamer, **kwargs)\u001b[0m\n\u001b[1;32m   1530\u001b[0m \u001b[39mif\u001b[39;00m is_greedy_gen_mode:\n\u001b[1;32m   1531\u001b[0m     \u001b[39mif\u001b[39;00m generation_config\u001b[39m.\u001b[39mnum_return_sequences \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m-> 1532\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1533\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mnum_return_sequences has to be 1 when doing greedy search, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1534\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbut is \u001b[39m\u001b[39m{\u001b[39;00mgeneration_config\u001b[39m.\u001b[39mnum_return_sequences\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1535\u001b[0m         )\n\u001b[1;32m   1537\u001b[0m     \u001b[39m# 11. run greedy search\u001b[39;00m\n\u001b[1;32m   1538\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgreedy_search(\n\u001b[1;32m   1539\u001b[0m         input_ids,\n\u001b[1;32m   1540\u001b[0m         logits_processor\u001b[39m=\u001b[39mlogits_processor,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1548\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mmodel_kwargs,\n\u001b[1;32m   1549\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: num_return_sequences has to be 1 when doing greedy search, but is 2."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I love to eat, apples are my favorite fruit.', 'Today the weather is very nice.', 'She loves to sing, dance, and act!']\n"
      ]
     }
    ],
    "source": [
-    "input_text = \"The book was really interesting! I couldn't put it down?\"\n",
-    "input_ids = tokenizer(input_text, return_tensors=\"pt\").input_ids\n",
+    "input_texts = ['I love eating, apples are my favorite fruit.', 'The weather is nice today.', 'She loves to sing, dance, and act!']\n",
+    "# Tokenize and pad the sentences\n",
+    "input_ids = [tokenizer(text, return_tensors=\"pt\").input_ids[0] for text in input_texts]\n",
+    "input_ids = pad_sequences(input_ids, maxlen=256, dtype=\"long\", truncating=\"post\", padding=\"post\", value=tokenizer.pad_token_id)\n",
+    "# Convert to PyTorch tensors\n",
+    "input_ids = torch.tensor(input_ids)\n",
+    "# Generate outputs\n",
     "outputs = model.generate(input_ids, max_length=256)\n",
-    "edited_text = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-    "edited_text"
+    "# Decode the outputs\n",
+    "edited_texts = [tokenizer.decode(output, skip_special_tokens=True) for output in outputs]\n",
+    "print(edited_texts)"
    ]
   },
   {
@@ -213,6 +214,75 @@
     "# input_ids = tokenizer(input_text, return_tensors=\"pt\").input_ids\n",
     "# outputs = model.generate(input_ids, max_length=256)\n",
     "# edited_text = tokenizer.decode(outputs[0], skip_special_tokens=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import language_tool_python\n",
+    "tool = language_tool_python.LanguageTool('en-US')\n",
+    "text = \"Him goes to the store to buy a new phone. Me and him are planning to visit the beach tomorrow.\"\n",
+    "matches = tool.check(text)\n",
+    "len(matches)\n",
+    "tool.close() # Call `close()` to shut off the server when you're done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of errors are -  2\n",
+      "The position of errors is : 0\n",
+      "Him\n",
+      "The replacement for that is : ['I', 'He', 'She', 'They']\n",
+      "The position of errors is : 43\n",
+      "e\n",
+      "The replacement for that is : ['I']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_text_till_next_space(text, index):\n",
+    "    # Find the index of the next space after the given index\n",
+    "    next_space_index = text.find(' ', index)\n",
+    "\n",
+    "    # If no space is found, print the substring from the given index till the end of the text\n",
+    "    if next_space_index == -1:\n",
+    "        print(text[index:])\n",
+    "    else:\n",
+    "        # Print the substring from the given index till the next space\n",
+    "        print(text[index:next_space_index])\n",
+    "print(\"number of errors are - \",len(matches))\n",
+    "for i in matches:\n",
+    "    print(\"The position of errors is :\",i.offsetInContext)\n",
+    "    print(\"The error : \",text[i.offsetInContext])\n",
+    "    # print_text_till_next_space(text,i.offsetInContext)\n",
+    "    print(\"The replacement for that is :\",i.replacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Match({'ruleId': 'WRONG_PRP_AT_SENT_START', 'message': 'The subject form of the pronoun may be required here.', 'replacements': ['I', 'He', 'She', 'They'], 'offsetInContext': 0, 'context': 'Him goes to the store to buy a new phone. M...', 'offset': 0, 'errorLength': 3, 'category': 'GRAMMAR', 'ruleIssueType': 'grammar', 'sentence': 'Him goes to the store to buy a new phone.'}), Match({'ruleId': 'CONFUSION_OF_ME_I', 'message': 'When referring to yourself and somebody else, put their name first. Also check whether the nominative form “I” is required here.', 'replacements': ['I'], 'offsetInContext': 43, 'context': '...m goes to the store to buy a new phone. Me and him are planning to visit the beach...', 'offset': 42, 'errorLength': 2, 'category': 'TYPOS', 'ruleIssueType': 'misspelling', 'sentence': 'Me and him are planning to visit the beach tomorrow.'})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matches)"
    ]
   },
   {
